Stopgap banner options.

--- a/packages/sarai-cms/client/components/sarai-cms.less
+++ b/packages/sarai-cms/client/components/sarai-cms.less
@@ -1,3 +1,8 @@
+.cms-image-preview {
+  width: 300px;
+  height: auto;
+}
+
 
 /*BLOCK STYLES*/
 .cms-block {
